Bug 31966 - PRINTING: blank page add at end of printed document
Summary: PRINTING: blank page add at end of printed document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.3.0 Beta3
Hardware: All All
: medium normal
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:3.4.6
Keywords:
: 33029 37061 41430 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-11-28 19:37 UTC by Gerardo Exequiel Pozzi
Modified: 2012-02-27 05:32 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gerardo Exequiel Pozzi 2010-11-28 19:37:07 UTC
Steps to reproduce:

1. Start with a new black presentation. 
2. Add a new slide. (so the document has two pages now, or any even number of pages)
3. File -> Print
4. Select: Handouts
5. Slides per page: 2

Now in preview frame you can see that there is one more page than expected, the last page is blank (or with any footer/header if any).

LibreOffice 3.3.0 OOO330m12 (Build:1) 3.2.99.3 ArchLinux build-1 (ooo330-m13)
Comment 1 Gerardo Exequiel Pozzi 2011-03-07 21:28:17 UTC
Still reproducible on LibreOffice 3.3.1 OOO330m19 (Build:8) 3.3.1.2 ArchLinux build-1
Comment 2 Don't use this account, use tml@iki.fi 2011-03-07 23:06:03 UTC
There is no need to add comments that a bug is still present in a new micro version (3.3.0 -> 3.3.1). It is expected that the bug is still present if there is no comment in the bug report that it would have been fixed.

For minor (3.3 -> 3.4) or even major (3. -> 4.) version changes, bugs indeed might get fixed "by themselves", i.e. as a consequence of other changes, or as part of the changes merged in from OOo. Then it makes sense to tell if a bug has gone away, but even after such version changes there is no need to tell that a bug is still present, unless a developer explicitly asks for confirmation that the bug is still there.
Comment 3 Rainer Bielefeld Retired 2011-04-27 05:20:57 UTC
[Reproducible] with "LibreOffice 3.3.2  – WIN7  Home Premium  (64bit) German UI [OOO330m19 (Build:202 / tag 3.3.2.2)]"

Same Prolbem with older OOo-dev 3.4
OK with OOo 3.1.1

The corresponding OOo bug is fixed for 3.4:
"Printing handouts prints one page (empty) too much"
<http://openoffice.org/bugzilla/show_bug.cgi?id=110321>

Thosrsten:
Your area?
Comment 4 Rainer Bielefeld Retired 2011-05-07 01:46:03 UTC
*** Bug 33029 has been marked as a duplicate of this bug. ***
Comment 5 Rainer Bielefeld Retired 2011-05-10 05:42:18 UTC
*** Bug 37061 has been marked as a duplicate of this bug. ***
Comment 6 Ivan Timofeev (retired) 2011-10-30 10:17:54 UTC
Fixed on master ;) http://cgit.freedesktop.org/libreoffice/core/commit/?id=eda6d8971dd5b33d572a123198bf0cca63120cf9
Comment 7 Rainer Bielefeld Retired 2011-12-25 00:45:52 UTC
*** Bug 41430 has been marked as a duplicate of this bug. ***
Comment 8 Gerardo Exequiel Pozzi 2012-01-13 23:11:14 UTC
is supposed to be fixed in [3.4.4 OOO340m1 (Build:402)]? Because this bug is still present.
Comment 9 Rainer Bielefeld Retired 2012-01-14 00:57:46 UTC
@Gerardo Exequiel Pozzi:
From where do you have that information concerning 3.4.4 fix?
Comment 10 Ivan Timofeev (retired) 2012-01-14 01:17:50 UTC
The bug was fixed in 3.5. However, we can fix it in 3.4 as well I think...
Comment 11 Rainer Bielefeld Retired 2012-01-14 02:05:35 UTC
> The bug was fixed in 3.5. 

I know!

> However, we can fix it in 3.4 as well I think...

That, of course, would be the very best solution.
Comment 12 Gerardo Exequiel Pozzi 2012-01-14 07:20:02 UTC
(In reply to comment #9)
> @Gerardo Exequiel Pozzi:
> From where do you have that information concerning 3.4.4 fix?

I guessed from date that such fix was pushed to master branch.
Comment 13 Not Assigned 2012-02-27 05:21:29 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-4":

http://cgit.freedesktop.org/libreoffice/impress/commit/?id=6c0f9cc00e81862e888b680a83bd14c0f16811aa&g=libreoffice-3-4

fdo#31966: do not create an empty slide when printing handouts


It will be available in LibreOffice 3.4.6.