fix fdo#31966: inserting empty slide when printing handouts